scrollbar issues

--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -40,7 +40,7 @@
   top: 0
   margin: 0
   right: 0
-  left: 50%
+  left: 50vw
   transition: all .3s easeInOutQuad
   padding: 41px 40px
   &__progress
