--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -51,6 +51,21 @@ body
     overflow-x: hidden
     pointer-events: all
 
+html:not(.is-safari)
+  ::-webkit-scrollbar
+    position: absolute
+    width: 5px
+
+  /* Track */
+  ::-webkit-scrollbar-track
+    border-radius: 0px
+    background-color: white
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb
+    border-radius: 00px
+    background-color: $primaryColor2
+
 .page
   display: flex
   flex-direction: column
